collapse table, simple fix

--- a/styles/customboot.less
+++ b/styles/customboot.less
@@ -544,3 +544,54 @@ article{
     display: none;
   }
 }
+
+@media
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr {
+		display: block;
+	}
+
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr {
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+
+	tr { border: 1px solid #ccc; }
+
+	td {
+		/* Behave  like a "row" */
+    padding: 0!important;
+		border: none;
+		border-bottom: 1px solid #eee;
+		position: relative;
+    padding-left: 40%!important;
+    white-space: pre-wrap;
+	}
+
+	td:before {
+    // display: inline-block;
+		position: absolute;
+		top: 6px;
+		left: 6px;
+		width: 45%;
+		padding-right: 10px;
+		white-space: nowrap;
+	}
+	/*
+	Label the data
+	*/
+	td:nth-of-type(1):before { content: "Member"; color:@brand-primary; font-weight: 600;}
+	td:nth-of-type(2):before { content: "Party"; color:@brand-primary; font-weight: 600;}
+	td:nth-of-type(3):before { content: "Home State"; color:@brand-primary; font-weight: 600;}
+	td:nth-of-type(4):before { content: "District"; color:@brand-primary; font-weight: 600;}
+	td:nth-of-type(5):before { content: "Event Type"; color:@brand-primary; font-weight: 600;}
+	td:nth-of-type(6):before { content: "Date"; color:@brand-primary; font-weight: 600;}
+	td:nth-of-type(7):before { content: "Time";color:@brand-primary; font-weight: 600;}
+	td:nth-of-type(8):before { content: "Location"; color:@brand-primary; font-weight: 600;}
+	td:nth-of-type(9):before { content: "Address"; color:@brand-primary; font-weight: 600;}
+}
